--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Igal Rubin's Portfolio</title>
   </head>
